--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-jwt",
   "version": "0.0.1",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
